--- a/rapid_oracle/package.json
+++ b/rapid_oracle/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
+    "lottie-react": "^2.4.0",
     "primereact": "^10.2.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
